# monumenta-server-management

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: main.yml  pullrequest.yml  tag.yml
chat-logger/: Cargo.toml  Dockerfile  README.md  build.gradle.kts  deployment.example.yml  docker_build_and_push.sh
chat-logger/deploy/: deployment.example.yml
chat-logger/docker/: start.sh
chat-logger/src/: main.rs
chat-logger/src/main/java/com/playmonumenta/chatlogger/: ChatLoggerApp.java
chat-logger/src/main/resources/: config.yml  log4j2.xml
config/checkstyle/: suppressions.xml
examples/redis-sync/: build.gradle.kts
gradle/: libs.versions.toml
gradle-plugin/: .gitignore  README.md  settings.gradle.kts
gradle-plugin/gradle/: libs.versions.toml
limbo/: build.gradle.kts
monumenta-common/: README.md  UPGRADING.md  build.gradle.kts
network-chat/: README.md  build.gradle.kts
network-relay/: .gitignore  README.md  TESTS.md  build.gradle.kts  settings.gradle.kts
redis-sync/: .gitignore  README.md  UPGRADING.md  WORKING_WITH_REDIS.md  build.gradle.kts  settings.gradle.kts
redis-sync/core/: build.gradle.kts
structure-management/: README.md  build.gradle.kts
sync-backend/: Cargo.toml  PROTOCOL.md  build.rs  rust-toolchain.toml
sync-backend/proc-macros/: Cargo.toml
sync-backend/proc-macros/src/: lib.rs
sync-backend/src/: connection.rs  events.rs  main.rs  player.rs  topology.rs  util.rs
sync-backend/src/protocol/: mod.rs  serde.rs
world-management/: README.md  build.gradle.kts
zones/: README.md  build.gradle.kts
(+357 files in other folders)
