[package]
name = "chat-logger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-logger"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
lapin = "4"
redis = { version = "1.2", features = ["tokio-comp"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1"
