
[profile.release]
lto = "fat"

[package]
name = "sync-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
derive_more = { version = "2.1.1", features = ["display"] }
log = { version = "0.4.29", features = ["kv"] }
log4rs = "1.4.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
toml = "0.9.10"
proc-macros = { version = "0.1.0", path = "proc-macros" }
variadics_please = "1.1.0"
rand = "0.9.2"
